fixed events image spacing

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -625,7 +625,7 @@ header.contact-page {
   }
   .events .wrapper .events-image {
     box-shadow: -15px 15px #FF8327;
-    left: 10px;
+    left: 15px;
   }
   .events .wrapper .events-space-holder {
     margin-right: calc((40/10 * 1rem) + (100vw - (941*1px))*((70 - 40)/(1600 - 941)));
