--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -258,7 +258,7 @@
 
             .events-image {
                 box-shadow: -15px 15px $secondary;
-                left: 10px;
+                left: 15px;
             }
 
             .events-space-holder {
